--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,10 +21,10 @@ jobs:
       uses: actions/checkout@v3
 
     # Étape 2 : Installer Python et les dépendances
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: 3.11
 
     - name: Install dependencies
       run: |
